<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal" >
         <TextView
             android:text="@string/orientation_tv"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView 
             android:text="@string/mmse_pro_01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="5"
             android:rating="0"
             android:max="5"
             android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="5"
             android:rating="0"
             android:max="5"
             android:stepSize="1"/>
         
         <TextView
             android:text="@string/registration_tv"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView 
             android:text="@string/mmse_pro_03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="3"
             android:rating="0"
             android:max="3"
             android:stepSize="1"/>
         
         <TextView
             android:text="@string/attention_calculation_tv"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView 
             android:text="@string/mmse_pro_04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="5"
             android:rating="0"
             android:max="5"
             android:stepSize="1"/>
         
         <TextView
             android:text="@string/recall_tv"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView 
             android:text="@string/mmse_pro_05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="3"
             android:rating="0"
             android:max="3"
             android:stepSize="1"/>
         
         <TextView
             android:text="@string/language_tv"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView 
             android:text="@string/mmse_pro_06"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_06"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="2"
             android:rating="0"
             android:max="2"
             android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_07"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_07"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="1"
             android:rating="0"
             android:max="1"
             android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_08"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_08"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="3"
             android:rating="0"
             android:max="3"
             android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_09"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_09"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="1"
             android:rating="0"
             android:max="1"
             android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar 
             android:id="@+id/mmse_pro_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="false"
             android:numStars="1"
             android:rating="0"
             android:max="1"
             android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
             android:src="@drawable/mmsepic"
             android:onClick="onstartdrawing"/>
         <RatingBar 
             android:id="@+id/mmse_pro_11"
             android:layout_width="wrap_content"
	 		 android:layout_height="wrap_content"
	  		 android:isIndicator="false"
	     	 android:numStars="1"
	 		 android:rating="0"
	 		 android:max="1"
	 		 android:stepSize="1"/>
         <TextView 
             android:text="@string/mmse_pro_12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Spinner 
             android:id="@+id/mmse_pro_12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/mmse_choose"
             android:prompt="@string/mmse_pro_12"/>
         <Button 
             android:id="@+id/mmse_pro_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/mmse_pro_submit"/>
     </LinearLayout> 
</ScrollView>

