<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	    	android:background="@drawable/patientinfo_back">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/doctor_name_tv"
		        android:textStyle="bold"/>
		    <TextView 
	            android:id="@+id/doctor_name_tv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	    	android:background="@drawable/patientinfo_back">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/patient_name_tv"
		        android:textStyle="bold"/>
		    <TextView 
	            android:id="@+id/patient_name_tv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	    	android:background="@drawable/patientinfo_back">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/patient_id_tv"
		        android:textStyle="bold"/>
		    <TextView 
	            android:id="@+id/patient_id_tv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	    	android:background="@drawable/patientinfo_back">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/patient_gender_tv"
		        android:textStyle="bold"/>
		    <TextView 
	            android:id="@+id/patient_gender_tv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	    	android:background="@drawable/patientinfo_back">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/patient_birth_tv"
		        android:textStyle="bold"/>
		    <TextView 
	            android:id="@+id/patient_birth_tv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	    	android:background="@drawable/patientinfo_back">
	        <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/patient_diagnose_tv"
		        android:textStyle="bold"/>
		    <TextView 
	            android:id="@+id/patient_diagnose_tv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
	    </LinearLayout>
	</LinearLayout>
    <ScrollView
	    android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    <TextView 
		        android:id="@+id/ad_test"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_1"
		        android:textSize="20sp"
		        android:textStyle="bold"/>
		    <Button 
		        android:id="@+id/ad_test_mmse"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_1_1"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    
		    <TextView 
		        android:id="@+id/frontal_test"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_2"
		        android:textSize="20sp"
		        android:textStyle="bold"/>
		    <Button
		        android:id="@+id/frontal_test_towerofhanoi"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_2_1"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    <Button
		        android:id="@+id/frontal_test_linecontact"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_2_2"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    <Button
		        android:id="@+id/frontal_test_wisconsin"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_2_3"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    <Button
		        android:id="@+id/frontal_test_cued"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_2_4"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    <Button
		        android:id="@+id/frontal_test_wordcolor"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_2_5"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    
		    <TextView 
		        android:id="@+id/memory_test"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_3"
		        android:textSize="20sp"
		        android:textStyle="bold"/>
		    <Button
		        android:id="@+id/memory_test_aospan"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_3_1"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    <Button
		        android:id="@+id/memory_test_digitspanvisual"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_3_2"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		    <Button
		        android:id="@+id/memory_test_digitspanacoustic"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/type_3_3"
		        android:textSize="20sp"
		        android:textColor="@color/white_text"
		        android:background="@drawable/btn_press"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>