<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cutter_patient">
     
	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_margin="5dp">

	    <TableRow
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/patient_name_tv"
             	android:textStyle="bold"/>
	        <EditText 
	            android:id="@+id/patient_name_et"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            android:layout_weight="2"
	            android:hint="@string/patient_name_et"
	            android:singleLine="true"
	            android:background="@drawable/edittext_back"/>
	    </TableRow>
	    <TableRow
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/patient_id_tv"
             	android:textStyle="bold"/>
	        <EditText 
	            android:id="@+id/patient_id_et"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            android:layout_weight="2"
	            android:hint="@string/patient_id_et"
	            android:singleLine="true"
	            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
	            android:background="@drawable/edittext_back"/>
	    </TableRow>
	    <TableRow
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/patient_gender_tv"
             	android:textStyle="bold"/>
	        <RadioGroup 
	            android:id="@+id/patient_gender_rg"
	            android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="2">
	            <RadioButton 
	                android:id="@+id/patient_male_rb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/patient_male_rb"/>
	            <RadioButton 
	                android:id="@+id/patient_female_rb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/patient_female_rb"/>
	        </RadioGroup>
	    </TableRow>
	    <TableRow
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center"
	            android:gravity="center_horizontal"
	            android:text="@string/patient_birth_tv"
             	android:textStyle="bold"/>
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:orientation="horizontal">
		        <DatePicker 
		            android:id="@+id/patient_birth_dp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:calendarViewShown="false"
		            android:spinnersShown="true"
		            android:startYear="1900"
		            android:endYear="2050"/>
	        </LinearLayout>
	    </TableRow>
	    <TableRow
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	        <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/patient_diagnose_tv"
             	android:textStyle="bold"/>
	        <EditText 
	            android:id="@+id/patient_diagnose_et"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:singleLine="true"
	            android:hint="@string/patient_diagnose_et"
	            android:background="@drawable/edittext_back"/>
	    </TableRow>
	    <!-- <TableRow>
	        <TextView 
	            android:id="@+id/patient_evaltime_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"
	            android:text="@string/patient_evaltime_tv"/>
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:orientation="horizontal">
		        <DatePicker 
		            android:id="@+id/patient_evaltime_dp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:calendarViewShown="false"
		            android:spinnersShown="true"
		            android:startYear="1900"
		            android:endYear="2050"/>
		        <TimePicker 
		            android:id="@+id/patient_evaltime_tp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            />
	        </LinearLayout>
	    </TableRow> -->
	    <Button 
	        android:id="@+id/patient_info_submit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/patient_info_submit"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="5dp"
            android:textSize="20sp"
		    android:textColor="@color/white_text"
            android:background="@drawable/btn_press"/>
	</TableLayout>
</ScrollView>